--- a/Landing Page 02/css/style.css
+++ b/Landing Page 02/css/style.css
@@ -105,6 +105,7 @@ footer {
     position: fixed; /* Alinha o rodapé ao final da página */
     bottom: 0; /* Alinha o rodapé ao final da página */
     width: 100%; /* O rodapé ocupa 100% da largura da tela */
+    height: 50px;
 }
 
 /* Ajuste responsiivos */
@@ -120,4 +121,135 @@ footer {
     p {
         font-size: 16px;
     }
+}
+
+/* Sobre.HTML */
+/* Estilo geral para as seções */
+.about, .mission, .team {
+    padding: 40px 20px;
+    max-width: 900px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* Título principal */
+h1, h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+/* Texto comum */
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+/* Estilo para a seção de Missão, Visão e Valores */
+.mission-values {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.mission-item {
+    flex: 1;
+    min-width: 200px; /*280px*/
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.mission-item h3 {
+    font-size: 24px;
+    color: #444;
+    margin-bottom: 10px;
+}
+
+.mission-item p, .mission-item ul {
+    color: #555;
+    font-size: 16px;
+}
+
+.mission-item ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
+/* Contato.HTML */
+/* Estilo para a seção de contato */
+.contact {
+    padding: 20px;
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.contact form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+.contact textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.contact textarea {
+    resize: none; /* Desabilita o redimensionamento */
+}
+
+.contact button {
+    padding: 10px 15px;
+    background-color: #333;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.contact button:hover {
+    background-color: #555;
+}
+
+/* Estilo do formulário do mobile */
+@media (max-width: 768px) {
+    .contact {
+        padding: 15px;
+    }
+
+    .contact form {
+        padding: 15px;
+    }
+}
+
+
+/* Consultoria */
+.arroz {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    
+}
+
+.movie-image {
+    max-width: 450px;
+    height: 400;
 }
